--- a/classification/k_nearest_neighbor.ipynb
+++ b/classification/k_nearest_neighbor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -258,7 +258,7 @@
      "data": {
       "text/plain": "0.93"
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,23 +282,60 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import ListedColormap\n",
-    "X_set, y_set =sc.inverse_transform(X_train), y_train\n",
-    "X1, X2 = np.meshgrid(np.arange(start= X_set[:, 0].min() - 10, stop=X_set[:, 0].max() + 10, step = 0.25),\n",
-    "                     np.arange(start=X_set[:, 1].min() - 1000, stop=X_set[:, 1].max() + 1000, step = 0.25))\n",
+    "X_set, y_set = sc.inverse_transform(X_train), y_train\n",
+    "X1, X2 = np.meshgrid(np.arange(start = X_set[:, 0].min() - 10, stop = X_set[:, 0].max() + 10, step = 0.25),\n",
+    "                     np.arange(start = X_set[:, 1].min() - 1000, stop = X_set[:, 1].max() + 1000, step = 0.25))\n",
     "plt.contourf(X1, X2, classifier.predict(sc.transform(np.array([X1.ravel(), X2.ravel()]).T)).reshape(X1.shape),\n",
-    "            alpha=0.75, cmap = ListedColormap(('red', 'green')))\n",
+    "             alpha = 0.75, cmap = ListedColormap(('red', 'green')))\n",
     "plt.xlim(X1.min(), X1.max())\n",
     "plt.ylim(X2.min(), X2.max())\n",
     "for i, j in enumerate(np.unique(y_set)):\n",
-    "    plt.scatter(X_set == j, 0, X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label= j)\n",
-    "plt.title('Logistic Regression (Training set')\n",
+    "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label = j)\n",
+    "plt.title('SVM (Training set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Visualizing Test set:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from matplotlib.colors import ListedColormap\n",
+    "X_set, y_set = sc.inverse_transform(X_test), y_test\n",
+    "X1, X2 = np.meshgrid(np.arange(start = X_set[:, 0].min() - 10, stop = X_set[:, 0].max() + 10, step = 0.25),\n",
+    "                     np.arange(start = X_set[:, 1].min() - 1000, stop = X_set[:, 1].max() + 1000, step = 0.25))\n",
+    "plt.contourf(X1, X2, classifier.predict(sc.transform(np.array([X1.ravel(), X2.ravel()]).T)).reshape(X1.shape),\n",
+    "             alpha = 0.75, cmap = ListedColormap(('red', 'green')))\n",
+    "plt.xlim(X1.min(), X1.max())\n",
+    "plt.ylim(X2.min(), X2.max())\n",
+    "for i, j in enumerate(np.unique(y_set)):\n",
+    "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label = j)\n",
+    "plt.title('SVM (Test set)')\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Estimated Salary')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
