--- a/classification/logistic_regression.ipynb
+++ b/classification/logistic_regression.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -15,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('Social_Network_Ads.csv')\n",
@@ -25,13 +28,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -40,13 +44,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -57,23 +62,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "LogisticRegression(random_state=0)"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "classifier = LogisticRegression(random_state=0)\n",
@@ -82,143 +79,30 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(classifier.predict(sc.transform([[30, 87000]])))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 0]\n",
-      " [1 1]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [1 1]\n",
-      " [1 1]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 1]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [0 1]\n",
-      " [1 1]\n",
-      " [1 1]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "y_pred = classifier.predict(X_test)\n",
     "print(np.concatenate((y_pred.reshape(len(y_pred), 1), y_test.reshape(len(y_test), 1)), 1))"
@@ -226,31 +110,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[63  5]\n",
-      " [ 8 24]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "0.87"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
@@ -260,7 +128,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -270,15 +139,15 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import ListedColormap\n",
-    "X_set, y_set =sc.inverse_transform(X_train), y_train\n",
-    "X1, X2 = np.meshgrid(np.arange(start= X_set[:, 0].min() - 10, stop=X_set[:, 0].max() + 10, step = 0.25),\n",
-    "                     np.arange(start=X_set[:, 1].min() - 1000, stop=X_set[:, 1].max() + 1000, step = 0.25))\n",
+    "X_set, y_set = sc.inverse_transform(X_train), y_train\n",
+    "X1, X2 = np.meshgrid(np.arange(start= X_set[:, 0].min() - 10, stop = X_set[:, 0].max() + 10, step = 0.25),\n",
+    "                     np.arange(start=X_set[:, 1].min() - 1000, stop = X_set[:, 1].max() + 1000, step = 0.25))\n",
     "plt.contourf(X1, X2, classifier.predict(sc.transform(np.array([X1.ravel(), X2.ravel()]).T)).reshape(X1.shape),\n",
-    "            alpha=0.75, cmap = ListedColormap(('red', 'green')))\n",
+    "            alpha = 0.75, cmap = ListedColormap(('red', 'green')))\n",
     "plt.xlim(X1.min(), X1.max())\n",
     "plt.ylim(X2.min(), X2.max())\n",
     "for i, j in enumerate(np.unique(y_set)):\n",
-    "    plt.scatter(X_set == j, 0, X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label= j)\n",
+    "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1], c = ListedColormap(('red', 'green'))(i), label= j)\n",
     "plt.title('Logistic Regression (Training set')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
@@ -289,7 +158,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
